fix(toast): toast rendered as visible with `open="false"` (#315)

--- a/packages/bee-q/src/components/toast/scss/bq-toast.scss
+++ b/packages/bee-q/src/components/toast/scss/bq-toast.scss
@@ -5,11 +5,11 @@
 @import './bq-toast.variables';
 
 :host {
-  @apply hidden;
+  @apply inline-block;
 }
 
-:host([open]) {
-  @apply inline-block;
+:host(.is-hidden) {
+  @apply hidden;
 }
 
 .bq-toast {
